# zetdb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  task.md
.github/workflows/: ci.yml  release.yml
docs/: AOF.md  ARCHITECTURE.md  OBSERVABILITY.md  PHASES.md  SNAPSHOT.md  SPECIFICATION.md  architecture_old.md  prompt.md  task.md
docs/benchmarks/: report.html
src/: lib.rs  main.rs
src/application/: dispatcher.rs
src/config/: mod.rs
src/domain/: command.rs  errors.rs  mod.rs  value.rs
src/observability/: metrics.rs  mod.rs
src/protocol/: mod.rs  parser.rs  response.rs
src/server/: mod.rs  session.rs  tcp.rs
src/storage/: aof.rs  dashmap_engine.rs  engine.rs  mod.rs  snapshot.rs  ttl.rs
