[package]
name = "zetdb"
version = "0.1.0"
edition = "2021"
description = "In-memory KV store estilo Redis, implementado em Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
dashmap = "6"
log = "0.4"
env_logger = "0.11"
memchr = "2"
crc32fast = "1"
itoa = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
