[package]
name = "zetdb"
version = "0.1.0"
edition = "2021"
description = "High-performance in-memory key-value store inspired by Redis, implemented in Rust"
license = "MIT"
repository = "https://github.com/mzet97/zetdb"
readme = "README.md"
keywords = ["redis", "kv-store", "database", "in-memory", "async"]
categories = ["database-implementations", "network-programming"]
exclude = ["docs/", "target/", ".github/", "benches/"]

[lib]
name = "zetdb"
path = "src/lib.rs"

[[bin]]
name = "zetdb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
dashmap = "6"
log = "0.4"
env_logger = "0.11"
memchr = "2"
crc32fast = "1"
itoa = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
